# yubikey-manager

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  COPYING  Cargo.toml  LICENSE  MANIFEST.in  NEWS  README  README.adoc  about-cli.hbs  about.toml  appveyor.yml  deny.toml  generate-man.py  lgtm.yml  licenses.txt  mypy.ini  pyproject.toml  python3-pyOpenSSL.spec  rpc-shell.py  run-pyright.sh  setup.cfg  setup.py  shell.py  test_requirements.txt  tox.ini  version_info.txt.in  ykman.spec  yubikey-manager.spec
.config/: nextest.toml
.github/: ISSUE_TEMPLATE.md  scribe-sign-exe-dll.yml  scribe-sign-exe.yml  scribe-sign-msi.yml
_yubikit_native/: __init__.pyi  device.pyi  hid.pyi  oath.pyi  pcsc.pyi
crates/ykman/: Cargo.toml
crates/ykman-cli/: Cargo.toml  build.rs
crates/ykman-cli/examples/: ctap2_selection.rs  fido_selection.rs
crates/ykman-cli/src/: apdu.rs  appdata.rs  cli_enums.rs  config.rs  ctap_device.rs  diagnose.rs  diagnostics.rs  fido.rs  fido_rpc.rs  hsmauth.rs  info.rs  lib.rs  list.rs  logging.rs  main.rs  oath.rs  openpgp.rs  otp.rs  piv.rs  scp.rs  securitydomain.rs  util.rs
crates/ykman-cli/src/rpc/: client.rs  connection.rs  ctap2.rs  device.rs  error.rs  mod.rs  node.rs  proxy.rs
crates/ykman-cli/tests/: cli_apdu.rs  cli_config.rs  cli_fido.rs  cli_hsmauth.rs  cli_info.rs  cli_oath.rs  cli_openpgp.rs  cli_otp.rs  cli_piv.rs  cli_securitydomain.rs
crates/ykman-cli/tests/common/: mod.rs
crates/ykman-cli/tests/fixtures/: ec_p256.p12  ec_p256_cert.der  ec_p256_cert.pem  ec_p256_enc.p12  ec_p256_key.der  ec_p256_key.pem  ec_p256_key_enc.pem  ec_p256_modern.p12  ec_p384.p12  ec_p384_cert.der  ec_p384_cert.pem  ec_p384_key.der  ec_p384_key.pem  pskc_hotp.xml  pskc_multi.xml  pskc_sha256.xml  pskc_totp.xml  rsa_2048.p12  rsa_2048_cert.der  rsa_2048_cert.pem  rsa_2048_enc.p12  rsa_2048_key.der  rsa_2048_key.pem  rsa_2048_key_enc.pem
crates/ykman-pyo3/: Cargo.toml
crates/ykman-pyo3/src/: lib.rs  py_bridge.rs  py_core.rs  py_device.rs  py_hid.rs  py_hsmauth_session.rs  py_logging.rs  py_management_session.rs  py_oath.rs  py_oath_session.rs  py_openpgp_session.rs  py_otp_protocol.rs  py_pcsc.rs  py_piv_session.rs  py_scp.rs  py_securitydomain_session.rs  py_smartcard_protocol.rs  py_yubiotp_session.rs
crates/ykman-svc/: Cargo.toml
crates/ykman-svc/src/: connection.rs  device.rs  device_manager.rs  main.rs  pipe_server.rs  root_node.rs  service.rs  session.rs  signing.rs
crates/ykman/src/: appdata.rs  cancel.rs  device.rs  diagnostics.rs  keyboard.rs  lib.rs  signing.rs  util.rs
crates/ykman/src/rpc/: client.rs  connection.rs  device.rs  error.rs  mod.rs  node.rs  proxy.rs  signing.rs
crates/yubikey-mgmt/: Cargo.toml
crates/yubikey-mgmt/examples/: device_info.rs  list_devices.rs  oath_list.rs
crates/yubikey-mgmt/src/: device.rs  hsmauth.rs  iso7816.rs  lib.rs  management.rs  oath.rs  openpgp.rs  piv.rs  scp.rs  securitydomain.rs  tlv.rs  yubiotp.rs
crates/yubikey-mgmt/src/transport/: hid.rs  pcsc.rs
crates/yubikit/: Cargo.toml
crates/yubikit-pyo3/: Cargo.toml
crates/yubikit-pyo3/src/: lib.rs  py_bridge.rs  py_core.rs  py_ctap.rs  py_device.rs  py_hid.rs  py_hsmauth.rs  py_hsmauth_session.rs  py_logging.rs  py_management.rs  py_management_session.rs  py_oath.rs  py_oath_session.rs  py_openpgp.rs  py_openpgp_session.rs  py_otp.rs  py_otp_protocol.rs  py_pcsc.rs  py_piv.rs  py_piv_session.rs  py_scp.rs  py_securitydomain.rs  py_securitydomain_session.rs  py_smartcard.rs  py_smartcard_protocol.rs  py_webauthn.rs  py_yubiotp.rs  py_yubiotp_session.rs
crates/yubikit/examples/: ctap2_selection.rs  device_info.rs  example_utils.rs  list_devices.rs  oath_list.rs  reinsert.rs  webauthn.rs  webauthn_cred_blob.rs  webauthn_cred_props.rs  webauthn_cred_protect.rs  webauthn_large_blob.rs  webauthn_prf.rs  ykinfo.rs
crates/yubikit/src/: cbor.rs  core.rs  core_types.rs  ctap.rs  ctap2.rs  device.rs  fido.rs  hsmauth.rs  lib.rs  logging.rs  management.rs  oath.rs  openpgp.rs  otp.rs  piv.rs  scp.rs  securitydomain.rs  smartcard.rs  tlv.rs  yubiotp.rs
crates/yubikit/src/ctap2/: bio_enrollment.rs  client_pin.rs  config.rs  credential_management.rs  large_blobs.rs  mod.rs  pin_protocol.rs  session.rs  types.rs
crates/yubikit/src/platform/: ctaphid.rs  device.rs  hidapi.rs  mod.rs  otphid.rs
crates/yubikit/src/transport/: ctaphid.rs  mod.rs  otphid.rs  pcsc.rs  setupdi.rs
crates/yubikit/src/webauthn/: client.rs  mod.rs  types.rs
crates/yubikit/src/webauthn/extensions/: cred_blob.rs  cred_props.rs  cred_protect.rs  large_blob.rs  min_pin_length.rs  mod.rs  prf.rs  sign.rs
crates/yubikit/tests/: arkg_p256.rs  controller.rs  device_tests.rs
debian/: changelog  control  copyright  python-yubikey-manager.install  python3-yubikey-manager.install  rules  yubikey-manager.install  yubikey-manager.links  yubikey-manager.manpages
doc/: Development.adoc  Device_Permissions.adoc  Library_Usage.adoc  Migration_5-6.adoc  Scripting.adoc  development.adoc  integration-tests.adoc  permissions.adoc  releasing.adoc
docs/: Makefile  conf.py  index.rst  make.bat
examples/: README.adoc  chalresp-touch.py  credential_management.py  ctap2_selection.py  example_utils.py  piv_certificate.py  piv_chuid.py  webauthn.py  webauthn_cred_blob.py  webauthn_cred_props.py  webauthn_cred_protect.py  webauthn_large_blob.py  webauthn_prf.py  yubiotp_batch.py  yubiotp_batch_nfc.py
integration_test/: conftest.py  test_piv.py
man/: ykman.1
resources/: fix_libusb_dep_app_bundle.sh  win-installer.nsi  ykman-gui.desktop  yubikey-manager.icns
snap/: snapcraft.yaml
src/: core.rs  hid.rs  lib.rs  pcsc.rs  scp.rs
test/: test_cbor.py  test_cli_commands_on_yubikey.py  test_device.py  test_external_libs.py  test_oath.py  test_piv.py  test_scancodes.py  test_scanmap.py  test_script.py  test_util.py  test_yubikey_slot.py  util.py
tests/: conftest.py  ruff.toml  test_core.py  test_device.py  test_hsmauth.py  test_management.py  test_oath.py  test_piv.py  test_scancodes.py  test_util.py  util.py
ykman/: VERSION  __init__.py  _openpgp.py  base.py  bio.py  (+21 more)
(+309 files in other folders)
