[workspace]
members = ["crates/yubikit", "crates/yubikit-pyo3", "crates/ykman", "crates/ykman-cli", "crates/ykman-svc"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Yubico/yubikey-manager"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
