[project]
name = "yubikey-manager"
version = "5.7.3-dev.0"
description = "Library and CLI for managing your YubiKey configuration."
authors = [
  { name = "Dain Nilsson", email = "<dain@yubico.com>" }
]
readme = "README.adoc"
requires-python = ">=3.10, <4"
license = { file = "COPYING" }
keywords = ["yubikey", "yubiotp", "piv", "fido"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities"
]
dependencies = [
  "cryptography (>=3.0, <48)",
  "pyscard (>=2.0, <3)",
  "fido2 (>=2.0, <3)",
  "click (>=8.0, <9)",
  "keyring (>=23.4, <26)",
  "pywin32 (>=223) ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "makefun>=1.9.5,<2",
    "pyinstaller>=6.10,<7",
    "sphinx>=7.4,<8",
    "sphinx-rtd-theme>=3,<4",
    "sphinx-autoapi>=3.3.3,<4",
    "pyright>=1.1,<2",
]

[project.urls]
Homepage = "https://github.com/Yubico/yubikey-manager"

[project.scripts]
ykman = "ykman._cli.__main__:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
include = [
  { path = "COPYING", format = "sdist"},
  { path = "NEWS", format = "sdist"},
  { path = "README.adoc", format = "sdist"},
  "man/",
  "tests/",
]
packages = [
  { include = "yubikit" },
  { include = "ykman" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["I", "S"]
exclude = ["tests/*"]
