[project]
name = "yubikey-manager"
version = "5.9.1-dev.0"
description = "Library and CLI for managing your YubiKey configuration."
authors = [
  { name = "Dain Nilsson", email = "<dain@yubico.com>" }
]
readme = "README.adoc"
requires-python = ">=3.10, <4"
license = { file = "COPYING" }
keywords = ["yubikey", "yubiotp", "piv", "fido"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities"
]
dependencies = [
  "cryptography (>=3.0, <49)",
  "fido2 (>=2.0, <3)",
  "click (>=8.0, <9)",
  "keyring (>=23.4, <26)",
  "pywin32 (>=223) ; sys_platform == 'win32'",
  "python-pskc (>=1.3, <2)",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
    "makefun>=1.9.5,<2",
    "pyinstaller>=6.10,<7",
    "sphinx>=7.4,<8",
    "sphinx-rtd-theme>=3,<4",
    "sphinx-autoapi>=3.3.3,<4",
]

[project.urls]
Homepage = "https://github.com/Yubico/yubikey-manager"

[project.scripts]
ykman = "ykman._cli.__main__:main"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/yubikit-pyo3/Cargo.toml"
module-name = "_yubikit_native"
python-packages = ["ykman", "yubikit"]
include = [
  "COPYING",
  "NEWS",
  "README.adoc",
  "man/**",
  "tests/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["E", "I", "S"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["tests/", "docs/"]
reportPrivateImportUsage = false
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"

[tool.ty.src]
exclude = ["docs"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
