[project]
name = "yubikey-manager-workspace"
version = "6.0.0-dev.0"
description = "Workspace for yubikit and yubikey-manager."
requires-python = ">=3.10, <4"

[dependency-groups]
dev = [
    "yubikit",
    "yubikey-manager",
    "pytest>=8.0,<10",
    "makefun>=1.9.5,<2",
    "sphinx>=7.4,<8",
    "sphinx-rtd-theme>=3,<4",
    "sphinx-autoapi>=3.3.3,<4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
yubikit = { workspace = true }
yubikey-manager = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "typings"

[tool.ruff.lint]
extend-select = ["E", "I", "S"]

[tool.ruff.lint.isort]
known-first-party = ["_yubikit_native"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["tests/", "docs/"]
reportPrivateImportUsage = false
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"

[tool.ty.environment]
extra-paths = ["typings"]

[tool.ty.src]
exclude = ["docs"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
