[package]
name = "ykman-cli"
version = "6.0.0-dev.0"
edition = "2024"
description = "YubiKey Manager CLI (Rust)"
license = "Apache-2.0"

[[bin]]
name = "ykman"
path = "src/main.rs"

[[example]]
name = "fido_selection"
path = "examples/fido_selection.rs"

[dependencies]
ykman = { path = "../ykman" }
yubikit = { path = "../yubikit" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
getrandom = "0.3"
hex = "0.4.3"
base32 = "0.5"
base64 = "0.22.1"
log = { version = "0.4", features = ["std"] }
elliptic-curve = { version = "0.13", features = ["pkcs8", "sec1"] }
p256 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
p384 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
sha2 = "0.10"
quick-xml = "0.37"
rpassword = "7"
x509-cert = { version = "0.2.5", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ctrlc = "3.5.2"
flate2 = "1"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
p12-keystore = "0.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell"] }

[build-dependencies]
flate2 = "1"
winresource = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"

[lints]
workspace = true
