[package]
name = "ykman-cli"
version = "6.0.0-dev.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YubiKey Manager CLI"
keywords = ["yubikey", "cli", "fido2", "oath", "security"]
categories = ["authentication", "command-line-utilities"]

[[bin]]
name = "ykman"
path = "src/main.rs"

[[example]]
name = "fido_selection"
path = "examples/fido_selection.rs"

[features]
default = ["hardware"]
hardware = ["ykman/hardware", "yubikit/hardware"]

[dependencies]
ykman.workspace = true
yubikit.workspace = true
clap.workspace = true
chrono.workspace = true
getrandom.workspace = true
hex.workspace = true
base32.workspace = true
base64.workspace = true
log = { workspace = true, features = ["std"] }
elliptic-curve = { workspace = true, features = ["pkcs8", "sec1"] }
p256 = { workspace = true, features = ["pkcs8", "ecdsa"] }
p384 = { workspace = true, features = ["pkcs8", "ecdsa"] }
sha2.workspace = true
quick-xml.workspace = true
rpassword.workspace = true
x509-cert = { workspace = true, features = ["pem"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
ctrlc.workspace = true
flate2.workspace = true
pkcs8.workspace = true
p12-keystore.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell"] }

[build-dependencies]
flate2.workspace = true
winresource.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
