[package]
name = "ykman-svc"
version = "6.0.0-dev.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YubiKey Manager background service"
keywords = ["yubikey", "service", "daemon"]
categories = ["authentication", "hardware-support"]

[[bin]]
name = "ykman-svc"
path = "src/main.rs"

[dependencies]
yubikit = { version = "0.1.0", path = "../yubikit" }
ykman = { version = "6.0.0-dev.0", path = "../ykman" }
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
serde_json = "1"
hex = "0.4.3"
ctrlc = "3.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[lints]
workspace = true
