[package]
name = "ykman-svc"
version = "6.0.0-dev.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YubiKey Manager background service"
keywords = ["yubikey", "service", "daemon"]
categories = ["authentication", "hardware-support"]

[[bin]]
name = "ykman-svc"
path = "src/main.rs"

[dependencies]
yubikit = { workspace = true, default-features = true }
ykman = { workspace = true, default-features = true }
clap.workspace = true
log = { workspace = true, features = ["std"] }
serde_json.workspace = true
hex.workspace = true
ctrlc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-service.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[lints]
workspace = true
