[package]
name = "ykman"
version = "6.0.0-dev.0"
edition = "2024"
description = "YubiKey Manager library (Rust)"
license = "Apache-2.0"

[lib]
name = "ykman"
path = "src/lib.rs"

[features]
default = ["hardware"]
hardware = ["yubikit/hardware"]

[dependencies]
yubikit = { path = "../yubikit", default-features = false }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3.5.2"
hex = "0.4.3"
log = { version = "0.4", features = ["std"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
fernet = { version = "0.2", default-features = false, features = ["rustcrypto"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring-core = "1"
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring-core = "1"
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring-core = "1"
windows-native-keyring-store = "1"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "linux", target_os = "macos", target_os = "windows")))'.dependencies]
keyring-core = { version = "1", features = ["sample"] }

[dev-dependencies]
base64 = "0.22.1"

[lints]
workspace = true
