[package]
name = "ykman"
version = "6.0.0-dev.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YubiKey Manager library"
keywords = ["yubikey", "fido2", "oath", "piv", "security"]
categories = ["authentication", "cryptography", "hardware-support"]

[lib]
name = "ykman"
path = "src/lib.rs"

[features]
default = ["hardware"]
hardware = ["yubikit/hardware"]

[dependencies]
yubikit.workspace = true
chrono.workspace = true
clap.workspace = true
ctrlc.workspace = true
hex.workspace = true
log = { workspace = true, features = ["std"] }
sha2.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
dirs.workspace = true
fernet.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring-core.workspace = true
dbus-secret-service-keyring-store.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring-core.workspace = true
apple-native-keyring-store.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
keyring-core.workspace = true
windows-native-keyring-store.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "linux", target_os = "macos", target_os = "windows")))'.dependencies]
keyring-core = { workspace = true, features = ["sample"] }

[dev-dependencies]
base64.workspace = true

[lints]
workspace = true
