[package]
name = "yubikey-mgmt"
version = "0.1.0"
edition = "2024"
description = "YubiKey management library"
license = "BSD-2-Clause"

[dependencies]
aes = "0.8"
base32 = "0.5"
cbc = { version = "0.1", features = ["alloc"] }
cmac = "0.7"
cipher = "0.4"
getrandom = "0.3"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
pcsc = "2"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
elliptic-curve = { version = "0.13", features = ["sec1"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", features = ["ecdh", "ecdsa"] }
rsa = "0.9"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
des = "0.8"
flate2 = "1"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2" }
