[package]
name = "yubikit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YubiKey management library"
keywords = ["yubikey", "fido2", "webauthn", "smartcard", "security"]
categories = ["authentication", "cryptography", "hardware-support"]
autoexamples = false

[features]
default = ["hardware"]
hardware = ["dep:hidapi", "dep:pcsc"]

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
base32.workspace = true
base64.workspace = true
cbc.workspace = true
cmac.workspace = true
cipher.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_trace"] }
pbkdf2.workspace = true
pcsc = { workspace = true, optional = true }
sha1.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
elliptic-curve.workspace = true
p256.workspace = true
p384.workspace = true
rsa.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
des.workspace = true
flate2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
x509-cert.workspace = true
signature.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { workspace = true, default-features = false, features = ["linux-static-hidraw"], optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { workspace = true, default-features = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
] }

[dev-dependencies]
ecdsa.workspace = true
elliptic-curve = { workspace = true, features = ["pkcs8", "sec1"] }
getrandom.workspace = true
ml-dsa.workspace = true
ml-kem.workspace = true
p256 = { workspace = true, features = ["ecdsa", "hash2curve", "pkcs8"] }
pcsc.workspace = true
rsa.workspace = true
rstest.workspace = true
sha2 = { workspace = true, features = ["oid"] }

[[example]]
name = "ctap2_selection"
path = "examples/ctap2_selection.rs"

[[example]]
name = "device_info"
path = "examples/device_info.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[example]]
name = "oath_list"
path = "examples/oath_list.rs"

[[example]]
name = "reinsert"
path = "examples/reinsert.rs"

[[example]]
name = "webauthn"
path = "examples/webauthn.rs"

[[example]]
name = "webauthn_cred_blob"
path = "examples/webauthn_cred_blob.rs"

[[example]]
name = "webauthn_cred_protect"
path = "examples/webauthn_cred_protect.rs"

[[example]]
name = "webauthn_cred_props"
path = "examples/webauthn_cred_props.rs"

[[example]]
name = "webauthn_large_blob"
path = "examples/webauthn_large_blob.rs"

[[example]]
name = "webauthn_prf"
path = "examples/webauthn_prf.rs"

[lints]
workspace = true
